<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:padding="40dp"
        android:textAlignment="center"
        tools:context=".screens.WelcomeScreenFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FAF9F9"
            android:padding="10dp"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@android:color/background_light"
            android:padding="10dp"
            android:text="@string/welcome_secondary_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />


        <Button
            android:id="@+id/welcomeGoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="220dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            android:padding="20dp"
            android:text="@string/add_shoe_title"
            android:textColor="#F6F3F3"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>
