<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        tools:context=".screens.InstructionsFragment">

        <TextView
            android:id="@+id/instructionTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/instructions_title"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instructionTitleText"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/instructions_secondary_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/instructionsShopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="220dp"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/add_shoe_title"
            android:textColor="#F6F3F3"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>
