<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="@android:color/background_light"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_input_title"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/emailInput"
            app:layout_constraintStart_toStartOf="@+id/emailInput"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.952" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/login_title_text"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="@+id/passwordInput"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            app:layout_constraintVertical_bias="0.625" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="354dp"
            android:layout_height="52dp"
            android:layout_marginTop="80dp"
            android:background="@android:color/background_light"
            android:cursorVisible="true"
            android:elevation="5dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:shadowColor="#EFE5E5"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="354dp"
            android:layout_height="52dp"
            android:layout_marginTop="56dp"
            android:background="@android:color/background_light"
            android:elevation="5dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_marginBottom="140dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            android:text="@string/login_text"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/signUpText"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            android:text="@string/create_account_text"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signInButton"
            app:layout_constraintVertical_bias="0.166" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
